# raif-bootcamp-2021

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  boot_camp_train.csv  dp.py  models.py  pyproject.toml
model_data/: __init__.py  torch_model
notebooks/: baseline_accuracy.ipynb  data_prepro.ipynb  env_prototype.ipynb  rl_model_app.ipynb  train_a2c.ipynb
rl/: agent.py  env_pool.py  rl_env.py
