[tool.poetry]
name = "deeppavlov_test"
version = "0.1.0"
description = ""
authors = ["Anton Gavrilov <anton.gavrilov@raiffeisen.ru>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
deeppavlov = "^0.14.0"
colorama = "^0.4.4"
Flask = "^2.0.2"
tensorflow = "1.15.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.3"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
